# fastoml-cpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  ReadExample.cpp  StaticRefStructExample.cpp  WriteExample.cpp
src/: Builder.cpp  Builder.hpp  CBridge.cpp  Document.cpp  Document.hpp  Error.hpp  Fastoml.hpp  NodeView.cpp  NodeView.hpp  Options.hpp  PathParser.cpp  PathRef.hpp  StructConvert.hpp
src/detail/: CInterop.hpp  FastomlCImpl.c  PathParser.hpp
